--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,10 @@ edition = "2018"
 rand = "0.7.0"
 regex = "1.1.9"
 
-#serenity = {version="0.6.2",default-features=false,features=["client","rustls_backend"]}
-serenity = "0.7.0"
-reqwest = "0.9.18"
-pest = "2.1.1"
+serenity = "0.7.3"
+reqwest ={version ="0.10.0-alpha.2", features=["blocking","json"]}
+pest = "2.1.2"
 pest_derive = "2.1.0"
-lazy_static = "1.3.0"
+lazy_static = "1.4.0"
 serde = {version="1.0.94", features=["derive"]}
 serde_json = "1.0.39"
