--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,4 +6,10 @@ phases:
   post_build:
     commands:
       - "echo Build completed on `date`"
+artifacts:
+  files:
+    - '**/*'
+  base-directory: base_dir
+  name: build-artifact-name
+  discard-paths: no
 version: 0.1
