--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,7 @@ phases:
   build:
     commands:
       - "echo Build started on `date`"
+      - "cargo run main.rs --release"
   post_build:
     commands:
       - "echo Build completed on `date`"
