--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,5 +1,8 @@
 ---
 phases:
+  pre-build:
+    commands:
+      - "curl https://sh.rustup.rs -sSf | sh"
   build:
     commands:
       - "echo Build started on `date`"
