--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,6 +6,7 @@ phases:
   build:
     commands:
       - "echo Build started on `date`"
+      - "source $HOME/.cargo/env"
       - "cargo run main.rs --release"
   post_build:
     commands:
