--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2018"
 rand = "^0.7.3"
 regex = "^1.3.7"
 
-serenity = "^0.8.6"
-reqwest ={version ="^0.10.4", features=["blocking","json"]}
+tokio = "*"
+serenity = "^0.10.0"
+reqwest ={version ="^0.12.4", features=["blocking","json"]}
 pest = "^2.7.9"
-pest_derive = "^2.1.0"
+pest_derive = "^2.7.9"
 lazy_static = "^1.4.0"
 serde = {version="^1.0.110", features=["derive"]}
 serde_json = "^1.0.53"
