--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ rand = "^0.7.3"
 regex = "^1.3.7"
 
 tokio = "*"
-serenity = "^0.10.0"
+poise = "^0.6.1"
 reqwest ={version ="^0.12.4", features=["blocking","json"]}
 pest = "^2.7.9"
 pest_derive = "^2.7.9"
